# green_brain

./: CMakeLists.txt  README
src/: CMakeLists.txt  NCsbn.cxx  osc_NCsbn.cxx
xml/: NCsbn.xml
